[gd_scene load_steps=17 format=3 uid="uid://dcosg2j6qqww8"]

[ext_resource type="Script" path="res://Scenes/Mob/Mob.gd" id="1_mno22"]
[ext_resource type="PackedScene" uid="uid://ckjfa8q5vykds" path="res://Scenes/Tool/Actionable.tscn" id="2_8yyng"]
[ext_resource type="Script" path="res://Scenes/Mob/EnemyStates/StateMachineController.gd" id="2_b2anw"]
[ext_resource type="Script" path="res://Scenes/Tool/StateMachine/StateMachine.gd" id="3_r687w"]
[ext_resource type="Script" path="res://Scenes/Mob/EnemyStates/IdleState.gd" id="4_fqmb1"]
[ext_resource type="Script" path="res://Scenes/Mob/EnemyStates/SuspiciousState.gd" id="5_eg1kb"]
[ext_resource type="Script" path="res://Scenes/Mob/EnemyStates/PatrolState.gd" id="6_j7gh3"]
[ext_resource type="Script" path="res://Scenes/Mob/EnemyStates/ChaseState.gd" id="7_de7w8"]
[ext_resource type="Script" path="res://Scenes/Mob/EnemyStates/TurretState.gd" id="8_cbdw7"]
[ext_resource type="Script" path="res://Scenes/Mob/EnemyStates/WalkToState.gd" id="8_pfinb"]
[ext_resource type="AudioStream" uid="uid://bqlgjb3eytyrr" path="res://Assets/SFX/chokbar.wav" id="9_2j8lt"]
[ext_resource type="Script" path="res://Scenes/Mob/EnemyStates/SeekingState.gd" id="9_cgq4v"]
[ext_resource type="PackedScene" uid="uid://cehxc8imvs687" path="res://Scenes/SFX/voice.tscn" id="11_akmrt"]
[ext_resource type="AudioStream" uid="uid://b7lmpfertrq00" path="res://Assets/SFX/voices/voice_oboe.ogg" id="12_y5u5o"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qakwb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ff4gg"]
size = Vector3(1, 1.97467, 1)

[node name="Mob" type="CharacterBody3D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 15
velocity = Vector3(0, -58618.1, 0)
script = ExtResource("1_mno22")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qakwb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00283813, 0)
shape = SubResource("BoxShape3D_ff4gg")

[node name="DeathActionable" parent="." instance=ExtResource("2_8yyng")]

[node name="StateMachineController" type="Node" parent="." node_paths=PackedStringArray("stateMachine")]
script = ExtResource("2_b2anw")
stateMachine = NodePath("../StateMachine")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialStateNode")]
script = ExtResource("3_r687w")
initialStateNode = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent")]
script = ExtResource("4_fqmb1")
parent = NodePath("../..")

[node name="Suspicious" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent")]
script = ExtResource("5_eg1kb")
parent = NodePath("../..")

[node name="Patrol" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent", "nav")]
script = ExtResource("6_j7gh3")
parent = NodePath("../..")
nav = NodePath("../../NavigationAgent3D")

[node name="WalkTo" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent", "nav")]
script = ExtResource("8_pfinb")
parent = NodePath("../..")
nav = NodePath("../../NavigationAgent3D")

[node name="Turret" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent")]
script = ExtResource("8_cbdw7")
parent = NodePath("../..")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent", "nav")]
script = ExtResource("7_de7w8")
parent = NodePath("../..")
nav = NodePath("../../NavigationAgent3D")

[node name="Seeking" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent", "nav")]
script = ExtResource("9_cgq4v")
parent = NodePath("../..")
nav = NodePath("../../NavigationAgent3D")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_2j8lt")
bus = &"Effects"
attenuation_filter_cutoff_hz = 20500.0

[node name="Voice" parent="." instance=ExtResource("11_akmrt")]
stream = ExtResource("12_y5u5o")
pitch_scale = 1.1
max_distance = 20.0
max_polyphony = 2
voice_speed_min = 0.2
voice_speed_max = 0.5

[connection signal="actioned" from="DeathActionable" to="." method="_on_death_actionable_actioned"]
[connection signal="spotted" from="StateMachineController" to="." method="_on_state_machine_controller_spotted"]
